# scherzo

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.js
.github/workflows/: static.yml
assets/: index-jr2wMFkl.css
deployment/: index.html
src/: App.jsx  main.jsx
src/app_data_context/: index.jsx
src/generator/: index.js
src/generator/label_model_generator/: index.js
src/generator/wasm_helpers/: index.js
src/io/image_io/: image_reader.js
src/rendering/GenericRenderWindow/: index.js
src/rendering/GenericRenderWindowInteractor/: index.js
src/viewer_page/: index.jsx  styles.module.css
src/viewer_page/icon_buttons/: icon_button.jsx  index.jsx  styles.module.css
src/viewer_page/main_control_panel/: index.jsx  label_color_preset_menu.jsx  styles.module.css
src/viewer_page/tp_slider/: index.jsx  styles.module.css
src/wasm/: CMakeLists.txt  configure.sh  copy_wasm.sh  generate_mesh.cxx  generate_mesh.hxx  generator.cxx  generator.h
src/welcome_page/: index.jsx  styles.module.css
